--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,12 @@ nav ul li a {
 }
 
 main {
+    text-align: center;
     padding: 20px;
+    position:relative;
+    font-family: Arial, sans-serif;
+    margin: 0;
+     padding: 0;
 }
 
 footer {
